fixed display on mobile, except for email.

--- a/src/style.css
+++ b/src/style.css
@@ -156,7 +156,7 @@ html, body {
 }
 
 .contact-section {
-     font-size: 1.6rem;
+     font-size: 1rem;
 }
 .contact-section > div {
     display: flex;
@@ -178,7 +178,7 @@ html, body {
 
     }
     .subsection {
-        width: 100%;
+        max-width: 80vw;
     }
     .name-and-pic {
         grid-template-columns: 1fr;
